--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build/esm",
     "allowSyntheticDefaultImports": true,
     "declarationDir": "./build/types",
     "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
     "noImplicitAny": true,
+    "types": ["vitest/globals"],
     "noUnusedLocals": true,
     "jsx": "react-jsx",
     "module": "ES6",
     "importHelpers": true
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx", "env.d.ts"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx", "env.d.ts", "test"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
