--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -2,6 +2,14 @@
   "name": "@universal-labs/hooks",
   "version": "1.4.16",
   "description": "helper hooks for common utility functions",
+  "keywords": [
+    "react-native",
+    "tailwindcss",
+    "postcss",
+    "tailwind-ui",
+    "react-native-web",
+    "universal-apps"
+  ],
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
     "url": "https://github.com/react-universal/tailwind/issues"
@@ -36,8 +44,7 @@
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "vitest run",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
@@ -56,9 +63,6 @@
     "typescript": "^4.9.4",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
-  },
-  "peerDependencies": {
-    "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
     "access": "public",
