--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -2,6 +2,14 @@
   "name": "@universal-labs/styled",
   "version": "1.4.16",
   "description": "Styled components for css in react native",
+  "keywords": [
+    "react-native",
+    "tailwindcss",
+    "postcss",
+    "tailwind-ui",
+    "react-native-web",
+    "universal-apps"
+  ],
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
     "url": "https://github.com/react-universal/tailwind/issues"
@@ -38,8 +46,7 @@
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "vitest run",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
@@ -52,9 +59,13 @@
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
+    "@types/react-test-renderer": "^18.0.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/ui": "^0.28.3",
+    "happy-dom": "latest",
+    "jsdom": "latest",
     "react": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "tslib": "^2.3.0",
     "typescript": "^4.9.4",
     "vite": "^4.1.1",
