--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -33,8 +33,8 @@
   "module": "./build/index.es.js",
   "types": "./src/index.ts",
   "files": [
-    "src",
     "build",
+    "react-native",
     "LICENSE",
     "CHANGELOG.md",
     "README.md"
