--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -31,7 +31,7 @@
   },
   "main": "./build/index.umd.js",
   "module": "./build/index.es.js",
-  "types": "./src/index.ts",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "react-native",
@@ -61,6 +61,7 @@
     "@types/react-native": "0.70.7",
     "@types/use-sync-external-store": "^0.0.3",
     "vite": "^4.1.1",
+    "vite-plugin-dts": "^2.1.0",
     "vitest": "^0.28.3"
   },
   "publishConfig": {
