--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -40,7 +40,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "vite build && yarn build:native",
+    "build": "vite build && yarn build:native && npx tsc -p tsconfig.json",
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -60,6 +60,7 @@
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
     "@types/use-sync-external-store": "^0.0.3",
+    "rollup-plugin-typescript2": "^0.34.1",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.1.0",
     "vitest": "^0.28.3"
