--- a/packages/sheets/tsconfig.json
+++ b/packages/sheets/tsconfig.json
@@ -3,15 +3,17 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
-    "declarationDir": "./build",
+    "declarationMap": false,
     "noImplicitAny": false,
-    "jsx": "react-native",
+    "emitDeclarationOnly": true,
+    "outDir": "./build",
+    "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
+    "noEmit": false,
     "strict": true,
-    "stripInternal": true,
     "target": "esnext"
   },
-  "include": ["src", "env.d.ts"]
+  "include": ["src", "env.d.ts"],
+  "exclude": ["build"]
 }
