feat(packages): build for native and clean deps

--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -2,10 +2,13 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "declarationDir": "./build/types",
+    "declarationMap": false,
+    "declarationDir": "./build",
     "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
     "noImplicitAny": true,
     "types": ["vitest/globals"],
+    "outDir": "./build",
+    "noEmit": false,
     "noUnusedLocals": true,
     "jsx": "react-jsx",
     "module": "ES6",
