--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -44,7 +44,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "vite build && yarn build:native",
+    "build": "vite build && yarn build:native && npx tsc -p tsconfig.json",
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
