--- a/packages/tailwind-ui/tsconfig.json
+++ b/packages/tailwind-ui/tsconfig.json
@@ -13,6 +13,6 @@
     "module": "ES6",
     "importHelpers": true
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx", "env.d.ts", "cypress", "test"],
+  "include": ["src","env.d.ts"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
