--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -31,7 +31,7 @@
   },
   "main": "./build/index.umd.js",
   "module": "./build/index.es.js",
-  "types": "./src/index.ts",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "CHANGELOG.md",
@@ -39,7 +39,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "vite build && yarn build:native",
+    "build": "vite build && yarn build:native && npx tsc -p tsconfig.json",
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
