--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./build",
     "rootDir": "./src",
+    "emitDeclarationOnly": true,
+    "declarationMap": false,
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
