--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -36,7 +36,7 @@
   },
   "main": "./build/index.umd.js",
   "module": "./build/index.es.js",
-  "types": "./src/index.ts",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "LICENSE",
@@ -44,7 +44,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "vite build && yarn build:native && npx tsc -p tsconfig.json",
+    "build": "vite build && yarn build:native && npx tsc -p tsconfig.build.json",
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
