--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -42,7 +42,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn vite build && yarn build:native && npx tsc -p tsconfig.json",
+    "build": "yarn vite build && yarn build:native && npx tsc -p tsconfig.build.json",
     "build:native": "yarn vite build -c vite.native.config.ts",
     "dev": "yarn vite build -w --force",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
