--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -14,6 +14,6 @@
     "module": "ES6",
     "importHelpers": true
   },
-  "include": ["src", "env.d.ts"],
+  "include": ["src", "env.d.ts", "test"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
