--- a/packages/sheets/tsconfig.json
+++ b/packages/sheets/tsconfig.json
@@ -14,6 +14,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "include": ["src", "env.d.ts"],
+  "include": ["src", "env.d.ts", "test"],
   "exclude": ["build"]
 }
