feat(tailwindui): start adding components (#39)
* feat(tailwindcss): flatlist and styled other props

* feat(tailwind ui): add more components

* feat(tailwind ui): add more components

* feat(tailwind ui): add more components

* feat(tailwind ui): add more components

* feat(tailwind ui): add more components

* feat(tailwind core): remove unused plugins

* feat(tailwind core): remove unused plugins

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -1,6 +1,6 @@
 name: Health Check
 on:
-  push:
+  pull_request:
     branches:
       - main
 
@@ -23,5 +23,11 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - run: yarn --immutable
-      - run: yarn build:libs
+      - name: Install deps with yarn
+        run: yarn --immutable
+
+      - name: Run build
+        run: yarn build:libs
+
+      - name: Run tests
+        run: yarn test
