--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,8 @@
     "tailwind",
     "tailwindcss",
     "tailwind-plugin",
+    "react-native-web",
+    "universal-labs",
     "react-native",
     "react"
   ],
@@ -34,7 +36,6 @@
   "module": "./build/index.es.js",
   "types": "./index.d.ts",
   "files": [
-    "src",
     "build",
     "index.d.ts",
     "tailwind",
@@ -48,19 +49,14 @@
     "build:tailwind": "vite build -c vite.tailwind.config.ts",
     "dev": "yarn vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "test": "vitest run",
     "test:ui": "vitest --ui"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
   },
   "dependencies": {
     "postcss": "8.4.21",
     "postcss-color-rgb": "^2.0.0",
     "postcss-css-variables": "^0.18.0",
-    "postcss-js": "^4.0.0",
-    "postcss-rem-to-pixel": "^4.1.2"
+    "postcss-js": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
@@ -73,10 +69,6 @@
     "tsx": "^3.12.5",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
-  },
-  "peerDependencies": {
-    "postcss": ">= 8.0.0",
-    "tailwindcss": ">= 3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
