--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build",
-    "rootDir": "./src",
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "noUnusedLocals": false,
     "module": "ESNext",
-    "types": ["node"],
+    "noEmit": false,
+    "declarationMap": false,
+    "emitDeclarationOnly": true,
+    "outDir": "./build",
+    "types": ["node", "vitest/globals"],
     "importHelpers": true
   },
-  "include": ["./src"],
+  "include": ["src", "src"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
