--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@universal-labs/tailwind-ui",
   "version": "1.4.16",
-  "description": "",
+  "description": "Tailwind UI replica for react native",
+  "keywords": [
+    "react-native",
+    "tailwindcss",
+    "postcss",
+    "tailwind-ui",
+    "react-native-web",
+    "universal-apps"
+  ],
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
     "url": "https://github.com/react-universal/tailwind/issues"
@@ -23,9 +31,8 @@
   },
   "main": "./build/index.umd.js",
   "module": "./build/index.es.js",
-  "types": "./src/index.ts",
+  "types": "./build/index.d.ts",
   "files": [
-    "src",
     "build",
     "LICENSE",
     "CHANGELOG.md",
@@ -36,7 +43,8 @@
     "dev": "yarn vite build -w",
     "e2e": "cypress open",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "expo-module test"
+    "test": "vitest run",
+    "test:ui": "yarn vitest --ui"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
@@ -58,15 +66,18 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
+    "@types/react-test-renderer": "^18.0.0",
     "@universal-labs/stylesheets": "workspace:*",
     "cypress": "^12.7.0",
+    "happy-dom": "latest",
+    "jsdom": "latest",
+    "react-hot-toast": "^2.4.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-svg": ">= 12",
+    "react-test-renderer": "^18.2.0",
     "tslib": "^2.3.0",
-    "vite": "^4.1.1"
-  },
-  "peerDependencies": {
-    "next": ">= 13.0.0",
-    "react-native-svg": ">= 12"
+    "vite": "^4.1.1",
+    "vitest": "^0.28.3"
   },
   "publishConfig": {
     "access": "public",
