--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@actions/github": "5.1.1",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
+    "@nrwl/nx-cloud": "latest",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
