feat(packages): build for native and clean deps

--- a/nx.json
+++ b/nx.json
@@ -10,7 +10,7 @@
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build","^build:native"]
     }
   }
 }
