--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -39,8 +39,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "vite build && yarn build:native && npx tsc -p tsconfig.build.json",
-    "build:native": "vite build -c vite.native.config.ts",
+    "build": "npx vite build && yarn build:native && npx tsc -p tsconfig.build.json",
+    "build:native": "npx vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
@@ -54,14 +54,7 @@
     "@types/node": "16.11.7",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-native": "0.70.7",
-    "@vitejs/plugin-react-swc": "^3.2.0",
-    "@vitest/ui": "^0.28.3",
-    "react": "18.2.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.1",
-    "vitest": "^0.28.3"
+    "@types/react-native": "0.70.7"
   },
   "publishConfig": {
     "access": "public",
