--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -64,9 +64,7 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
-    "@types/use-sync-external-store": "^0.0.3",
-    "vite": "^4.1.1",
-    "vitest": "^0.28.3"
+    "@types/use-sync-external-store": "^0.0.3"
   },
   "publishConfig": {
     "access": "public",
