--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -39,7 +39,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn vite build",
+    "build": "npx vite build",
     "dev": "yarn vite build -w",
     "e2e": "cypress open",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -68,16 +68,12 @@
     "@types/react-native": "0.70.7",
     "@types/react-test-renderer": "^18.0.0",
     "@universal-labs/stylesheets": "workspace:*",
-    "cypress": "^12.7.0",
-    "happy-dom": "latest",
-    "jsdom": "latest",
     "react-hot-toast": "^2.4.0",
     "react-native-modal-datetime-picker": "^14.0.1",
-    "react-native-svg": ">= 12",
-    "react-test-renderer": "^18.2.0",
-    "tslib": "^2.3.0",
-    "vite": "^4.1.1",
-    "vitest": "^0.28.3"
+    "react-native-svg": ">= 12"
+  },
+  "peerDependencies": {
+    "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
     "access": "public",
