--- a/packages/sheets/tsconfig.build.json
+++ b/packages/sheets/tsconfig.build.json
@@ -4,6 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
     "declarationMap": false,
+    "sourceMap": false,
     "noImplicitAny": false,
     "emitDeclarationOnly": true,
     "outDir": "./build",
