feat(monorepo): nx to lerna (#41)
* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

* feat(packages): build for native and clean deps

--- a/package.json
+++ b/package.json
@@ -14,44 +14,49 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "lerna run build --scope=\"@universal-labs/**\"",
+    "build:libs": "npx nx run-many --target=build --projects=\"@universal-labs/**\"",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "commit": "cz",
-    "dev": "lerna run dev --scope=\"@universal-labs/**\" --parallel",
-    "docs:build": "lerna run build --scope docs-page",
-    "docs:dev": "lerna run dev --scope docs-page",
-    "expo:android": "lerna run android --scope expo-app",
-    "expo:ios": "lerna run ios --scope expo-app",
-    "expo:start": "lerna run start --scope expo-app",
+    "dev": "npx nx run-many --target=dev --projects=\"@universal-labs/**\"",
+    "docs:build": "npx nx run build --project=docs-page",
+    "docs:dev": "npx nx run dev --project=docs-page",
+    "expo:android": "npx nx run android --project=expo-app",
+    "expo:ios": "npx nx run ios --project=expo-app",
+    "expo:start": "npx nx run start --project=expo-app",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
-    "lint": "lerna run lint --scope=\"@universal-labs/**\"",
+    "lint": "npx nx run-many --target=lint --projects=\"@universal-labs/**\"",
     "release": "yarn build:release && changeset publish",
-    "test": "yarn lerna run test",
-    "test:e2e": "lerna run e2e",
-    "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
-    "version:stage": "yarn install && git stage yarn.lock",
-    "web": "lerna run dev --scope next-app"
+    "test": "npx nx run-many --target=test --projects=\"@universal-labs/**\"",
+    "test:e2e": "npx nx run-many --target=e2e --projects=\"@universal-labs/**\"",
+    "web": "npx nx dev start --project=next-app"
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "dependencies": {
+    "@types/node": "16.11.7",
+    "@types/postcss-css-variables": "0.18.0",
+    "@types/postcss-js": "^4.0.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/tailwindcss": "3.1.0",
+    "happy-dom": "latest",
+    "jsdom": "latest",
+    "postcss": "8.4.21",
+    "postcss-color-rgb": "^2.0.0",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-js": "^4.0.0",
+    "react": "18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "3.2.4"
   },
   "devDependencies": {
-    "@actions/core": "1.10.0",
-    "@actions/exec": "1.1.1",
-    "@actions/github": "5.1.1",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
+    "@nrwl/devkit": "^15.8.7",
+    "@nrwl/eslint-plugin-nx": "^15.8.7",
+    "@nrwl/nx-cloud": "latest",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vue/compiler-sfc": "^3.2.47",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "dayjs": "^1.11.7",
+    "@vitejs/plugin-react-swc": "^3.2.0",
+    "@vitest/ui": "^0.28.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
@@ -60,11 +65,13 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "lerna": "^6.5.1",
+    "nx": "^15.8.7",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tslib": "^2.3.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vite": "^4.1.1",
+    "vitest": "^0.28.3"
   },
   "packageManager": "yarn@3.4.1"
 }
