--- a/packages/primitives/tsconfig.build.json
+++ b/packages/primitives/tsconfig.build.json
@@ -3,15 +3,14 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declarationMap": false,
+    "emitDeclarationOnly": true,
     "declarationDir": "./build",
-    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
     "noImplicitAny": true,
     "types": ["vitest/globals"],
     "outDir": "./build",
     "noEmit": false,
     "noUnusedLocals": true,
     "jsx": "react-jsx",
-    "module": "ES6",
     "importHelpers": true
   },
   "include": ["src", "env.d.ts"],
