--- a/packages/hooks/tsconfig.build.json
+++ b/packages/hooks/tsconfig.build.json
@@ -13,6 +13,6 @@
     "types": ["node"],
     "importHelpers": true
   },
-  "include": ["./src"],
+  "include": ["src"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
