--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declarationMap": false,
+    "emitDeclarationOnly": true,
     "declarationDir": "./build",
     "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
     "noImplicitAny": true,
